위변조 검증 기능 추가
